# AmnesiaTheDarkDescent

./: .gitignore  README.md
HPL2/core/: CMakeLists.txt  HPL2_0.sln  HPL2_0.vcproj  SDLMain.m  _HPL2_2010.sln  _HPL2_2010.vcproj  _HPL2_2010.vcxproj  _HPL2_2010.vcxproj.filters  buildcounter.pl  buildcounterinput.txt
HPL2/core/cmake/: BoilerPlate.cmake  UtilityFunctions.cmake
HPL2/core/include/: BuildID_HPL2_0.h  hpl.h
HPL2/core/include/ai/: AI.h  AINodeContainer.h  AINodeGenerator.h  AStar.h  StateMachine.h
HPL2/core/include/engine/: Engine.h  EngineInitVars.h  EngineTypes.h  LowLevelEngineSetup.h  SaveGame.h  ScriptFuncs.h  Updateable.h  Updater.h
HPL2/core/include/generate/: Generate.h  GenerateTypes.h  VoxelMap.h
HPL2/core/include/graphics/: Animation.h  AnimationTrack.h  Bitmap.h  Bone.h  BoneState.h  Color.h  DecalCreator.h  FontData.h  FrameBase.h  FrameBitmap.h  FrameBuffer.h  FrameSubImage.h  FrameTexture.h  GPUProgram.h  GPUShader.h  Graphics.h  GraphicsTypes.h  LowLevelGraphics.h  Material.h  MaterialType.h  MaterialType_BasicSolid.h  MaterialType_BasicTranslucent.h  MaterialType_Decal.h  MaterialType_Water.h  Mesh.h  MeshCreator.h  OcclusionQuery.h  PostEffect.h  PostEffectComposite.h  PostEffect_Bloom.h  PostEffect_ColorConvTex.h  PostEffect_ImageTrail.h  PostEffect_RadialBlur.h  ProgramComboManager.h  RenderFunctions.h  RenderList.h  Renderable.h  Renderer.h  RendererDeferred.h  RendererSimple.h  (+7 more)
HPL2/core/include/gui/: Gui.h  GuiGfxElement.h  GuiMaterial.h  GuiMaterialBasicTypes.h  GuiPopUp.h  GuiPopUpColorPicker.h  GuiPopUpFilePicker.h  GuiPopUpMessageBox.h  GuiPopUpUIKeyboard.h  GuiSet.h  GuiSkin.h  GuiTypes.h  Widget.h  WidgetBaseClasses.h  WidgetButton.h  WidgetCheckBox.h  WidgetComboBox.h  WidgetContextMenu.h  WidgetDummy.h  WidgetFrame.h  WidgetGroup.h  WidgetImage.h  WidgetLabel.h  WidgetListBox.h  WidgetListBoxBase.h  WidgetMainMenu.h  WidgetMenu.h  WidgetMenuItem.h  WidgetMultiPropertyListBox.h  WidgetSlider.h  WidgetTabFrame.h  WidgetTextBox.h  WidgetWindow.h
HPL2/core/include/haptic/: Haptic.h  HapticForce.h  HapticShape.h  HapticSurface.h  HapticTypes.h  LowLevelHaptic.h
HPL2/core/include/impl/: BitmapLoaderDevil.h  BitmapLoaderDevilDDS.h  BitmapLoaderDevilMisc.h  CGProgram.h  CGShader.h  CharacterBodyNewton.h  CollideShapeNewton.h  FmodSoundChannel.h  FmodSoundData.h  FrameBufferGL.h  GLSLProgram.h  GLSLShader.h  GamepadSDL.h  GamepadSDL2.h  GamepadXInput.h  HapticForceHaptX.h  HapticForceHaptX_Impulse.h  HapticForceHaptX_SawWave.h  HapticForceHaptX_SineWave.h  HapticForceHaptX_Spring.h  HapticForceHaptX_Viscosity.h  HapticShapeHaptX.h  HapticSurfaceHaptX.h  HapticSurfaceHaptX_Frictional.h  HapticSurfaceHaptX_Rough.h  HapticSurfaceHaptX_Simple.h  HapticSurfaceHaptX_Sticky.h  KeyboardSDL.h  LowLevelGraphicsSDL.h  LowLevelHapticHaptX.h  LowLevelInputSDL.h  LowLevelPhysicsNewton.h  LowLevelResourcesSDL.h  LowLevelSoundFmod.h  LowLevelSoundOpenAL.h  LowLevelSystemSDL.h  MeshLoaderCollada.h  MeshLoaderFBX.h  MeshLoaderMSH.h  MouseSDL.h  (+32 more)
HPL2/core/include/input/: Action.h  ActionGamepadAxis.h  ActionGamepadButton.h  ActionGamepadHat.h  ActionHaptic.h  ActionKeyboard.h  ActionMouseButton.h  Gamepad.h  Input.h  InputDevice.h  InputTypes.h  Keyboard.h  LowLevelInput.h  Mouse.h
HPL2/core/include/math/: BoundingVolume.h  CRC.h  Frustum.h  Math.h  MathTypes.h  Matrix.h  Spring.h  (+5 more)
HPL2/core/sources/: BuildID_HPL2_0_Win32.cpp  _add_license.bat
HPL2/dependencies/OALWrapper/: CMakeLists.txt  LICENSE  OALWrapper.sln  OALWrapper.vcproj  README.markdown  TODO
HPL2/tools/: CMakeLists.txt  LuxBasePersonal.h
HPL2/tools/HplLangEncoder/: HplLangEncoder.sln
HPL2/tools/HplLangTool/: AssemblyInfo.cs  Form1.cs  Form1.resx  HpLangTool.sln  HplLangTool.csproj  HplTrans.cs  MainForm.cs  MainForm.resx
HPL2/tools/NewEditors/: Editors.sln
HPL2/tools/buildcounter/: buildcounter.cpp  buildcounter.h  buildcounter.sln  buildcounter.vcproj
HPL2/tools/editors/: CMakeLists.txt
HPL2/tools/mapview/: MapView.cpp  MapView.sln  MapView.vcproj
HPL2/tools/modelview/: ModelView.cpp  ModelView.sln  ModelView.vcproj
HPL2/tools/mshconverter/: MshConverter.cpp  MshConverter.sln  MshConverter.vcproj
HPL2/tools/particleview/: ParticleView.cpp  ParticleView.sln  ParticleView.vcproj
HPL2/tools/texconverter/: TexConverter.cpp  TexConverter.sln  TexConverter.vcproj  TexHelpers.cpp
amnesia/src/: CMakeLists.txt
amnesia/src/BuildScripts/: README.txt  build-linux.sh  mock-config.txt  mock-prep.sh  mock-shell.sh  mock-sync.sh  mock-sync.txt
amnesia/src/CacheFileDateFix/: CacheFileDateFix.cpp  CacheFileDateFix.h  CacheFileDateFix.sln  CacheFileDateFix.vcproj
amnesia/src/game/: CMakeLists.txt  Game-Info.plist  Lux.icns  Lux.rc  Lux.sln  Lux.sln.old  Lux.vcproj  Lux.vcxproj  LuxAchievementHandler.cpp  LuxAchievementHandler.h  LuxArea.cpp  LuxArea.h  LuxAreaNodes.cpp  LuxAreaNodes.h  LuxArea_Examine.cpp  LuxArea_Examine.h  LuxArea_Flashback.cpp  LuxArea_Flashback.h  LuxArea_Insanity.cpp  LuxArea_Insanity.h  LuxArea_Ladder.cpp  LuxArea_Ladder.h  LuxArea_Liquid.cpp  LuxArea_Liquid.h  LuxArea_Rope.cpp  LuxArea_Rope.h  LuxArea_Script.cpp  LuxArea_Script.h  LuxArea_Sign.cpp  LuxArea_Sign.h  LuxArea_SlimeDamage.cpp  LuxArea_SlimeDamage.h  LuxArea_Sticky.cpp  LuxArea_Sticky.h  LuxBase.cpp  LuxBase.h  LuxBasePersonal.h  LuxCommentaryIcon.cpp  LuxCommentaryIcon.h  LuxCompletionCountHandler.cpp  (+184 more)
amnesia/src/lang_conv/: LangConv.cpp  LangConv.sln  LangConv.vcproj
amnesia/src/launcher/: CMakeLists.txt  Launcher.rc  Launcher.sln  Launcher.vcproj  Launcher.vcxproj  Launcher.vcxproj.filters  LauncherCz.vcproj  LauncherHelper.cpp  LauncherHelper.h  LauncherRus.vcproj  Main.cpp  QualityChooser.cpp  QualityChooser.h  launcher.cpp  launcher.fl  launcher.h  launcherCz.cpp  launcherCz.fl  launcherCz.h  launcherRus.cpp  launcherRus.fl  launcherRus.h  resource.h
amnesia/src/launcher-macosx/: CMakeLists.txt  EditorSuite.plist  HPLMinimal.h  HPLMinimal.mm  Launcher-Info.plist  LauncherAppDelegate.h  LauncherAppDelegate.mm  MainWindow.xib  Startup.plist  TabBackground.h  TabBackground.m  main.m
(+2053 files in other folders)
